--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^3.0.1",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "pinia": "latest",
+    "vite-svg-loader": "^5.1.0",
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.13.9",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/tsconfig": "^0.7.0",
-    "npm-run-all2": "^7.0.2",
-    "typescript": "~5.8.0",
-    "vite": "^6.2.1",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.8"
+    "@tsconfig/node22": "latest",
+    "@types/node": "latest",
+    "@vitejs/plugin-vue": "latest",
+    "@vue/tsconfig": "latest",
+    "autoprefixer": "latest",
+    "npm-run-all2": "latest",
+    "sass-embedded": "^1.88.0",
+    "typescript": "latest",
+    "vite": "latest",
+    "vite-plugin-vue-devtools": "latest",
+    "vue-tsc": "latest"
   }
 }
